# brain-games

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg
brain_games/: game_logic.py  play_brain_even.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: .brain_games.py.swp  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
